--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "https://example.org/"
+baseurl = "https://melakakini.github.io/"
 languageCode = "en-us"
 title = "Agency"
 theme = "hugo-agency-theme"
