Update: config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://melakakini.github.com"
+baseurl = "https://melakakini.github.io"
 title = "Melaka Kini"
 copyright = "&copy; 2017 Melaka Kini"
 theme = "hugo-academic"
