--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
 # hostname (and path) to the root eg. http://spf13.com/
-baseurl = "http://www.example.com"
+baseurl = "http://melakakini.github.io"
 
 # Site title
-title = "sitename"
+title = "MELAKA KINI"
 
 # Copyright
-copyright = "(c) 2015 yourname."
+copyright = "(c) 2017 MELAKA KINI"
 
 # Language
 languageCode = "en-EN"
@@ -18,14 +18,14 @@ canonifyurls = true
 metaDataFormat = "toml"
 
 # Theme to use (located in /themes/THEMENAME/)
-# theme = "hugo-bootstrap"
+theme = "amp"
 
 # Pagination
 paginate = 10
 paginatePath = "page"
 
 # Enable Disqus integration
-disqusShortname = "your_disqus_shortname"
+# disqusShortname = "your_disqus_shortname"
 
 [permalinks]
     post = "/:year/:month/:day/:slug/"
