Update: config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
-baseurl = "https://www.example.com/"
+baseurl = "https://melakakini.github.io/"
 languageCode = "en-us"
-title = "Blackburn Theme Demo"
+title = "Blackburn Theme Demo or real MELAKA KINI"
 theme = "blackburn"
 author = "Yoshiharu Yamashita"
-copyright = "&copy; 2016. All rights reserved."
+copyright = "&copy; melaka kini 2017. All rights reserved."
 canonifyurls = true
 paginate = 10
 
