--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseurl = "https://example.com"
-title = "Academic"
-copyright = "&copy; 2016 Your Name"
+baseurl = "https://melakakini.github.io"
+title = "Academic melaka kini"
+copyright = "&copy; 2016 melaka kini
 theme = "academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
