--- a/config.toml
+++ b/config.toml
@@ -1,22 +1,22 @@
-baseurl = "https://melakakini.github.io"
-title = "Academic melaka kini"
-copyright = "&copy; 2016 melaka kini"
-theme = "hugo-academic"
+baseurl = "https://example.com"
+title = "Academic"
+copyright = "&copy; 2016 Your Name"
+theme = "academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 
 # Enable comments by entering your Disqus shortname
-# disqusShortname = ""
+disqusShortname = ""
 
 # Enable analytics by entering your Google Analytics tracking ID
-# googleAnalytics = ""
+googleAnalytics = ""
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = false
 
 [blackfriday]
-#  hrefTargetBlank = true
+  hrefTargetBlank = true
 
 [params]
   name = "Lena Smith"
@@ -32,7 +32,7 @@ defaultContentLanguageInSubdir = false
   telegram = ""
 
   # Enable Keybase in Contact section by entering your keybase.io username.
-#  keybase = ""
+  keybase = ""
 
   # Date format (refer to Go's date format: http://flippinggodateformat.com )
   #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
@@ -75,8 +75,8 @@ defaultContentLanguageInSubdir = false
   #
   #   For more info on the highlighting options, see:
   #   https://gcushen.github.io/hugo-academic-demo/post/writing-markdown-latex/#highlighting-options
- # highlight = true
-#  highlight_languages = []
+  highlight = true
+  highlight_languages = []
   # highlight_style = "github"
   # highlight_version = "9.9.0"
 
