Update: config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-baseurl = "https://example.com"
-title = "Academic"
+baseurl = "https://melakakini.github.io/"
+title = "Academic Melaka Kini"
 copyright = "&copy; 2016 Your Name"
 theme = "academic"
 enableEmoji = true
