--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ copyright = "(c) 2017 melaka kini."
 languageCode = "en-EN"
 
 # SES friendly url:s
-canonifyurls = true
+canonifyurls = false
 
 # Frontmatter format
 # "yaml", "toml", "json"
