Update: config.toml

--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,8 @@ canonifyurls = true
 metaDataFormat = "toml"
 
 # Theme to use (located in /themes/THEMENAME/)
-# theme = "hugo-bootstrap"
+
+theme = "hugo-base-theme"
 
 # Pagination
 paginate = 10
