--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
 # hostname (and path) to the root eg. http://spf13.com/
-baseurl = "http://www.example.com"
+baseurl = "https://melakakini.github.io"
 
 # Site title
-title = "sitename"
+title = "Melaka Kini"
 
 # Copyright
-copyright = "(c) 2015 yourname."
+copyright = "(c) 2017 Melaka Kini."
 
 # Language
 languageCode = "en-EN"
@@ -25,7 +25,7 @@ paginate = 10
 paginatePath = "page"
 
 # Enable Disqus integration
-disqusShortname = "your_disqus_shortname"
+# disqusShortname = "your_disqus_shortname"
 
 [permalinks]
     post = "/:year/:month/:day/:slug/"
@@ -36,8 +36,8 @@ disqusShortname = "your_disqus_shortname"
     topic = "topics"
 
 [author]
-    name = "yourname"
-    email = "yourname@example.com"
+    name = "Jensen"
+    email = "melakakini@hotmail.com"
 
 #
 # All parameters below here are optional and can be mixed and matched.
